--- a/sites/all/themes/slac/sass/_main_menu.sass
+++ b/sites/all/themes/slac/sass/_main_menu.sass
@@ -242,7 +242,8 @@ ul.sf-menu.sf-accordion.sf-expanded
         > li
           width: 25%
           margin: 0
-          text-align: center
+          
+          //text-align: center Bug #11329
           border-bottom: 1px solid #fff
           border-right: 1px solid #fff
           background-color: $menu_bg
@@ -251,7 +252,7 @@ ul.sf-menu.sf-accordion.sf-expanded
           &:nth-child(4n+4)
             border-right: 0
           > a
-            padding: 5px 0
+            padding: 5px 10px
 
 
             &.active-trail, &.active
